--- a/resume/styles/setup.css
+++ b/resume/styles/setup.css
@@ -34,7 +34,7 @@ p a { /* "all links in paragraphs..." */
 	max-width: 700px;
 /*	margin-right: auto;*/
 /*	margin-left: 100px;*/
-	padding: 50px 15px;
+	padding: 20px 15px;
 }
 
 
