--- a/resume/styles/style.css
+++ b/resume/styles/style.css
@@ -33,9 +33,14 @@
 
 .calm-voice {
 	 font-family: "Poppins", serif;
-	 font-size: 16px;
-	 line-height: 1.6;
-}
+	 font-size: 14px;
+	 line-height: 1.3;
+
+	}
+
+
+
+
 
 /*body*/
 
@@ -44,13 +49,11 @@ body{
 }
 
 
-h1{
-	margin-top: 1px;
-}
+
 
 
 h1 + div{
-	margin-top: 30px;
+/*	margin-top: 30px;*/
 }
 
 h2 + h3{
@@ -123,8 +126,7 @@ h3 + h4{
 
 .skill-card h2{
 	color: var(--color);
-	font-size: 120px;
-	padding: 10px 45px;
+	font-size: 64px;
 	text-align: center;
 }
 
@@ -141,6 +143,11 @@ h3 + h4{
 }
 
 
+.desktop{
+	display: none;
+}
+
+
 /*desktop*/
 
 @media (min-width: 1000px){
@@ -149,8 +156,8 @@ h3 + h4{
 		display: none;
 	}
 
-	footer{
-		
+	.desktop{
+		display: block;
 	}
 
 	footer, picture{
@@ -163,7 +170,9 @@ h3 + h4{
 	}
 
 
-	.small-phone{
+
+
+	.small-phone {
 		display: none;
 	}
 
@@ -172,9 +181,13 @@ h3 + h4{
 		padding-left: 100px;
 	}
 
+
+
+
+
 	.greeting{
-	display: block;
-}
+		display: block;
+	}
 
 	.amazon, .karachi, .conestoga, .arunachal{
 		display: flex;
@@ -222,20 +235,19 @@ h3 + h4{
 
 /*typography*/
 
-	.calm-voice {
-	 font-family: "Poppins", serif;
-	 font-size: 14px;
-	 line-height: 1.3;
-
-}
+	
 
 	.black-card li + li{
 		padding-top: 2px;
+	
 	}
 
 	.skill-card h2{
 	color: var(--color);
-	font-size: 60px;
-	padding: 70px 25px;
+	font-size: 64px;
+	padding: 100px 0px;
+
 	
+	}
+
 }
